#+STARTUP:showall

* NEWS
** Version 3.9.9-pre

*** Get rid of popup.el dependency
*** helm-completion-styles-alist accepts commands for completion-in-region
*** Minibuffer-contents change color in HFF when updating
This is controlled by =helm-ff-dim-prompt-on-update= user variable.

*** Now new file and dir have a dummy source in HFF, same for completing-read's
and read-file-name.

*** helm-info-at-point shows index of current page in addition of default

So it can safely be used as a replacement of "i" in Info.

*** Add affixation function for eww (emacs-30 only)
*** Allow toggling auto update in helm-top with a prefix arg
*** Do not use `dired-create-destination-dirs` mechanism for directory creation
as it is not working in some cases (e.g. symlinks).
*** Fix persistent action in helm mark-ring when follow mode is on
*** Fix Imenu preselection when point is on a name with special chars
*** Provide a new progress bar for rsync with a svg widget 
Needs svg-lib package but it is not mandatory.

** Version 3.9.8

*** New helm-finder command
*** Make `completions-detailed` working with 'emacs' helm-completion-style
It was already working but was really slow and was not supporting
`helm-completing-read-command-categories` mechanism which provide
`completions-detailed` in much more places than Emacs vanilla.
*** Helm-goto-line save position even when using persistent actions
*** helm-info is now colorized
*** Displaying thumnails is now slighly faster
*** Add a new mode to edit bookmark annotations
When viewing an annotation you had to kill the buffer, restart
helm-bookmarks, and run the edit annotation action, now you can edit
directly from the view buffer.
*** It is now possible to rename marked bookmarks
*** New compress/uncompress/compress-to action in helm-find-files
All actions are asynchronous except the persistent ones.
*** Allow toggling while-no-input for easier edebugging
Use the new `helm-update-edebug` variable to enable this.